# remote-mount

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/plans/: 2026-03-15-config-management.md  2026-03-15-remote-mount-design.md  2026-03-15-remote-mount-implementation.md
src/remote_mount/: cli.py  config.py  doctor.py  mounts.py  platform.py  service.py  ssh_config.py
tests/: test_cli.py  test_config.py  test_doctor.py  test_mounts.py  test_platform.py  test_service.py  test_ssh_config.py  test_watchdog.py
