[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remote-mount"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "paramiko>=3.0",
]

[project.scripts]
remote-mount = "remote_mount.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/remote_mount"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
